--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -29,13 +29,13 @@ p {
   opacity: 0.5;
 }
 
-.greyedout {
-	-webkit-opacity: 0.25;
-  	-moz-opacity: 0.25;
- 	opacity: 0.25;
+.greydout {
+	-webkit-opacity: 0.5;
+  	-moz-opacity: 0.5;
+ 	opacity: 0.5;
 }
 
-.greyedout:hover {
+.greydout:hover {
 	-webkit-opacity: 1;
   	-moz-opacity: 1;
   	opacity: 1;
